ft/src/tui/tests/snapshots/quickline_empty_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ new task ────────────────────────────────────────────────────────────────────┐
│type a task — e.g. "email Sarah due:tomorrow pri:high #work"                  │
└──────────────────────────────────────────────────────────────────────────────┘
  Enter to save · Esc to cancel                                                 
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│                               no matching tasks                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
