ft/src/tui/tests/snapshots/quickline_parse_error_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ new task ────────────────────────────────────────────────────────────────────┐
│draft due:not-a-date│                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
  ⚠ due: could not parse `not-a-date` as a date (try YYYY-MM-DD, `tomorrow`, `+3
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│                               no matching tasks                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
