ft/src/tui/tests/snapshots/quickline_valid_preview_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ new task ────────────────────────────────────────────────────────────────────┐
│buy milk due:tomorrow pri:high #grocery│                                      │
└──────────────────────────────────────────────────────────────────────────────┘
  → - [ ] buy milk #grocery ⏫  ➕  2026-05-10 📅  2026-05-11   → Daily/2026-05-10.
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│                               no matching tasks                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
