ft/src/tui/tests/snapshots/search_live_typing_80x24.snap
---
source: ft/src/tui/tests/search.rs
assertion_line: 86
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Timeblocks  
┌ Search ────────────────────────────────────────────────────────────────────────────────┐
│┌ AND · sort: relevance (2 results, 0 selected) ───────────────────────────────────────┐│
││> eigen│                                                                              ││
│└──────────────────────────────────────────────────────────────────────────────────────┘│
│▶     notes.md L5-5  eigen                                                              │
│      notes.md L1-1  eigen                                                              │
│────────────────────────────────────────────────────────────────────────────────────────│
│notes.md · L5–5 · eigen · score 2.50                                                    │
│────────────────────────────────────────────────────────────────────────────────────────│
│Eigen and memoization together in one paragraph.                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Search                     not yet refreshed          mode: normal
