ft/src/tui/tests/snapshots/sync_indicator_in_status_bar_80x24.snap
---
source: ft/src/tui/tests/git.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
> node where path = ""; expand where edge.kind in {directory-contains, note-link
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│    D /                                                                       │
│press / to edit query                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Graph           not yet refreshed   ⟳ sync · normal
