ft/src/tui/tests/snapshots/tasks_tab_age_bands_100x24.snap
---
source: ft/src/tui/tests/mod.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Timeblocks            
┌ query ───────────────────────────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────────────────────────┐
│ ── upcoming (6) ──                                                                               │
│▶       Fresh today                                                 📅  today        0d            │
│        Fresh 2d                                                    📅  today        2d            │
│        Aging 6d                                                    📅  today        6d            │
│        Stale 20d                                                   📅  today       20d            │
│        Rotten 56d                                                  📅  today       56d            │
│        Unknown age                                                 📅  today                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks                       refreshed [HH:MM:SS]             mode: normal
