ft/src/tui/tests/snapshots/tasks_tab_editing_80x24.snap
---
source: ft/src/tui/tests/mod.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query (editing) ─────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)│          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│ ── overdue (2) ──                                                            │
│▶   !!  Pay rent                                📅  2d ago                     │
│    !   Renew passport                          📅  yesterday                  │
│ ── upcoming (3) ──                                                           │
│        Reply to Sara                           📅  today                      │
│    !!  Submit Q2 report                        📅  in 2d      ⏳  tomorrow     │
│    v   Buy birthday gift                       📅  in 5d                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
