ft/src/tui/tests/snapshots/tasks_tab_populated_120x30.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Timeblocks                                
┌ query ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ── overdue (2) ──                                                                                                    │
│▶   !!  Pay rent                                                                        📅  2d ago                     │
│    !   Renew passport                                                                  📅  yesterday                  │
│ ── upcoming (3) ──                                                                                                   │
│        Reply to Sara                                                                   📅  today                      │
│    !!  Submit Q2 report                                                                📅  in 2d      ⏳  tomorrow     │
│    v   Buy birthday gift                                                               📅  in 5d                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks                                    refreshed [HH:MM:SS]                    mode: normal
